test/fixture/invalid/varshadow1.scrypt
contract Main {
    public function main(int x) {
        int x = 1;
        {
            int x = 2;
        }
        int x = 3;

        require(true);
    }
}